--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="favicon.png">
 </head>
 <body>
-  <h1>Adinath is Idiot</h1>
+  <h1>Adinath is Idiot . </h1>
+  <h2>Tushar is Adinath's LOVING son</h2>
 </body>
 </html>
