--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="favicon.png">
 </head>
 <body>
-  <h1>Adinath is Idiot . </h1>
-  <h1>Tushar is Adinath's LOVING son</h1>
+  <h1>Tushar is Adinath's son and is Idiot . </h1>
+  
 </body>
 </html>
